8254185: Fix Code cache sweeper heuristics for JDK 11 Reviewed-by: thartmann, kvn